# GPS

./: .gitignore  CMakeLists.txt  GenData.sh  Makefile  UserGraphs.data  gps.py  map.p  motor.py  motor.txt  sun1.000
TestData/JulienExperiment/000/: Test.000  Test2.000
TestData/JulienExperiment/RAW/: Nov11_1.000
data/Hamamatsu2013/SAT/CliffsideLoop/: Satcliff.000_distance.txt  motor.txt  motor.txt_distance.txt  sat3(cliff).000
data/Hamamatsu2013/SAT/Large_Loop/: motor1.txt  motor1.txt_distance.txt  motor2.txt  motor2.txt_distance.txt  motor3.txt_distance.txt  sat1.000  sat1.000_distance.txt
data/Hamamatsu2013/SAT/Small_Loop/: motor1.txt  motor1.txt_distance.txt  motor2.txt  motor2.txt_distance.txt  sat201.000  sat201.000_distance.txt
data/Hamamatsu2013/SUN/SunRun01/: motor.txt_distance.txt  sun1.000_distance.txt
data/Hamamatsu2013/SUN/SunRun02/: motor.txt  motor.txt_distance.txt  sun2.000_distance.txt
data/Hamamatsu2013/SUN/SunRun03/: Sun_long.000  Sun_long.000_distance.txt  motor.txt_distance.txt
data/Hamamatsu2013/SUN/TetrisTether/: tetris1.000  (+1 more)
data/data/Butter/: FilterdSunRun01.thb  FilterdSunRun02.thb  FilterdSunRun03.thb  map.thb
include/: wgs84.hpp
src/: python_wgs84.cpp  wgs84.cpp
src/WGS84/: blh2ecef.cpp  makefile  python_wgs84.cpp  wgs84.cpp  wgs84.hpp
src/blh2ecef/: blh2ecef.cpp  blh2ecef.hpp  ecef.cpp  makefile
src/gps/: gps.py
src/wgs84/: makefile  python_wgs84.cpp  wgs84.cpp
test/: gps.py
test/Hamamatsu/: sun2.000
test/JulienExperiment/000/: Nov11_1.000  Nov11_2.000
test/JulienExperiment/RAW/: Nov11_2.000
(+8 files in other folders)
