cmake_minimum_required(VERSION 2.8)
project(GPS)
add_subdirectory(lib)
add_subdirectory(src)
add_subdirectory(bin)
add_subdirectory(include)
INCLUDE_DIRECTORIES("${CMAKE_BINARY_DIR}/include" "/usr/include/python2.7")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")

add_library(wgs84 STATIC src/wgs84.cpp)
add_library(pywgs84 SHARED src/wgs84.cpp src/python_wgs84.cpp)
set_target_properties(pywgs84 PROPERTIES COMPILE_FLAGS "-DPIC")
target_link_libraries(pywgs84 python2.7 boost_python)
